Fix scrollbar track length when viewport is greater than content length
- Also hide horizontal scrollbar for now

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -1,6 +1,3 @@
-.ember-virtual-collection {
-  border: 1px solid blue;
-}
 .list-item {
   box-sizing: border-box;
   width: 100%;
